Added basic hover function

--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
     </header>
 
     <div id="main-container">
-        <button id="change-size">Change Size</button>
+        <button id="change-size" onclick=prompt("Change")>Change Size</button>
 
         <div id="grid-container" class="grid">
+  
         </div>
 
         <button id="reset-grid">Reset Grid</button>
