--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Kufam&display=swap" rel="stylesheet">
     <title>Etch-a-sketch</title>
 </head>
 <body>
@@ -13,10 +15,14 @@
     </header>
 
     <div id="main-container">
-        <button id="change-size" onclick=prompt("Change")>Change Size</button>
+        <button id="change-size">Change Size</button>
 
-        <div id="grid-container" class="grid">
+        <div>
+
+            <div id="grid-container" class="grid">
   
+            </div>
+
         </div>
 
         <button id="reset-grid">Reset Grid</button>
