Fixed change size function

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     </header>
 
     <div id="main-container">
+
         <button id="change-size">Change Size</button>
 
         <div>
@@ -25,14 +26,22 @@
 
         </div>
 
+        <div>
+            <button id="btn-clr">Black</button>
+            <button id="btn-clr">Gray</button>
+            <button id="btn-clr">Rainbow</button>
+            <button id="btn-clr">Eraser</button>
+        </div>
+
         <button id="reset-grid">Reset Grid</button>
 
     </div>
 
 
+
+    
     
     <script src="script.js"></script>
-
 </body>
 
 </html>
